# acci

./: .cargo-audit.toml  .cursorrules  .dockerignore  .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  MILESTONES.md  Makefile  PLAN.md  README.md  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.sqlx/: query-01098cdb1e595c333a65e420efb1dd999925e11b0ce8f39f82d2f2b2cb231e61.json  query-070a3ad8cc682acf3648d38b0040e62fa3e6683b648e659b113a62210109aab0.json  query-07e5e4748db924e3cab71cabc8957b1c9954858ad035619feed4c31c1924efdc.json  query-13794a035c94d50c3b9ed0de3b3e0c47f8585d636521d72acee626ecded59df0.json  query-15cb5fb1aa63573af432293f068621bea96479e9e825fb2a2452e3388a77a029.json  query-175eb0522372fb2d6adea1802840684f4182f4f3f0c253edb2eb73b12218b6ab.json  query-194f676ac708c0ce531e9e32ef5fe8859a74e72f79ed5c9c1ec64a69382207b5.json  query-23dccca22854f7301afe5184d1cace5b76b88f23381cd75dd3d25117da9f770c.json  query-23fa95a757f10d4e27db1eb861650395e35b888c8af23d9498af26b04ea1be2a.json  query-271e891aa734467902cbe00039c67c63b541ebe0740df2a9e3423dbf4925e97e.json  query-271f4984a710db71987ff70f3b323b6d0f1467252676d1b8bc03b0020e306635.json  query-36cc6c17c156fbb5072529a0cbc158953b6685d4afb25bdb10626540212f72d1.json  query-3cebfcb07382e8686c6579a9a3f244349c61592e2ee237e36f09233130d4b434.json  query-453374ce5ba36e1d9af9c1464b6a313b486f38053e800c86f3a5929dc0ee9636.json  query-49111552cb56b2c89d2ad5b30a25a7115f954374a1446705c5c9885ce6fa1d07.json  query-4932a949d6f276b3feabf3ffa8644992634c2110b9c4284a1d05a978274ec266.json  query-66f4edf9a0909d3702cf9b1643fcd7bc838b42b278fba92c8627082e6f2f46f5.json  query-698ad067355d96a2eae43a27eb2632a7b2b49ebf3674e95f64344d91f33a384d.json  query-6ed0d7e42be8ca05fb9bfd07c772cca9738f651be2397b7f9186bd7c6a5c5caa.json  query-7af9fc113153257acdfd59dd559879240ba4d1ad0b0f2635094381bac07dc8e5.json  query-8b5b7243507ff344bcab8cbb0e300d699d890ea551c6a1d7a14d2590d5b1f97c.json  query-95ab067cfd5ad1e22bd3255421a3f29bca679e9d137875634f4ad856c4026a51.json  query-968a372a28adc9d5abf303c65a2550408af050f2e9cb7cae7d9b416fe56ba9f2.json  query-9d149a3c5ea75098d79dd481738d50847d1e49e51cfa51329af1ba80ed51a19b.json  query-a07fb514f9d4d5d4a586e3cfc54b89a7defee601b73d258a04ea2656ffa919fd.json  query-a5b8b2d191e0c920a2a4065a23a3646b5a71e95c03d3644368ce457f7008574b.json  query-a5ca969eb1278bcf205b642be0bc7e531e8f8799c752c80210e67a513d8c109a.json  query-b26e921b607dfe4ef49c9c613c1e01406deb66d8fdabdc276976b6a66f763d29.json  query-b5fbe76c57fcfd743c166cb797ceeded13353f430bc917cae3b7476a0c77c58c.json  query-b7edbcfcada68e72fd7e61483153862dbe84a5589d324c52921c2ce238992d9b.json  query-b993b2eedbfb63a18e5edb6f730c729b423b57d21bfc226e30bbba31a9dc02c9.json  query-ba7754f1649fa874a8737c4b7b12aa69b59bceabe49920786956cbc5b1efcfb1.json  query-c96cd9b7823228c882aa10d84340d5cf3bc686382089384d602219c635760c45.json  query-cc8906d5b39c5318f1078a1e7167a263102b897aff11c6081ef101db7195242b.json  query-d59f1770e218bc7ab245fc1548af2e0f3850d612f9c1209e2baddd24aebfd741.json  query-e88877f140fdc186ccb3c6ae3a7cbe0a3876286765da7061d06aa50e6602fe4c.json  query-f9a49e7e0a30a2bd2300a477cd781de108d0c5e5aa09e0382b28fbba3a7d4b9e.json
acci/: all.html  constant.VERSION.html  fn.version.html  index.html  sidebar-items.js
config/: test-metrics.json
crates/acci-api/: Cargo.toml
crates/acci-api/src/: error.rs  lib.rs
crates/acci-api/src/middleware/: auth.rs  mod.rs
crates/acci-api/src/routes/: auth.rs  health.rs  mod.rs
crates/acci-auth/: Cargo.toml
crates/acci-auth/src/: lib.rs
crates/acci-auth/src/providers/: basic.rs  mod.rs
crates/acci-auth/src/tasks/: mod.rs  session_cleanup.rs
crates/acci-auth/tests/: auth.rs
crates/acci-auth/tests/common/: mock.rs
crates/acci-cli/: Cargo.toml  README.md
crates/acci-cli/src/: lib.rs
crates/acci-core/: Cargo.toml
crates/acci-core/src/: auth.rs  clock.rs  error.rs  lib.rs  models.rs
crates/acci-db/: Cargo.toml
crates/acci-db/.sqlx/: query-07f0e216d2bc0a78cc8e01e38f87f467557f59fbb9fa4c4d6f063f1d6a201127.json  query-333837d487f797c8c24918f0fb22a99b165bd31cc1fca2e36637a3c5909a8b67.json  query-395eb80b5a08983d80db7da636628ac0a121360f923eb94c8cca4829f58e08c1.json  query-489152b9fcd08b0f679ebf7890be1bba81f00a5174819df703d02c4aaede246c.json  query-70cc314afb8fbc7ead764baa3c9522671ff83b7c24a5a0dd511c6ae502689ad1.json  query-a6adb4aecd97910fdd3f9a7f801fb92407223eb416d69886bc1a1de751bc976c.json
crates/acci-db/migrations/: 20240327000000_create_users_table.sql  20240327000001_add_default_admin.sql  20240328000000_add_test_users.sql  20240328200000_add_sessions.sql  20240329000000_add_user_full_name.sql  20250220132838_add_is_active_to_users.sql
crates/acci-db/src/: config.rs  error.rs  lib.rs
crates/acci-db/src/models/: mod.rs  session.rs  user.rs
crates/acci-db/src/repositories/: mod.rs  session.rs  user.rs
crates/acci-frontend/: Cargo.toml
crates/acci-frontend/src/: lib.rs
docs/: ARCHITECTURE.md  Integration_Tests.md  M1.2_SimpleAuth.md  MILESTONES.md  SECURITY.md  alert-resolution.md  immediate-actions-plan.md  long-term-actions-plan.md  medium-term-actions-plan.md  mutation-testing-improvement-plan.md  test-metrics.md
migrations/: 20240327000001_add_default_admin.sql
scripts/: check-coverage.sh  check-performance.sh  generate-test-metrics.sh  push-metrics.sh
src/: lib.rs  main.rs
tests/: Cargo.toml  mod.rs
tests/api/: database_test.rs  health_test.rs  mod.rs  user_test.rs
tests/helpers/: db.rs  mod.rs
tests/src/: lib.rs
tests/src/api/: auth_test.rs  database_test.rs  health_test.rs  migrations_test.rs  mod.rs  test_users_test.rs  user_test.rs
tests/src/auth/: auth_flow.rs  mod.rs  password_hash_test.rs  rate_limit_test.rs  session_hijacking_test.rs  token_mutation_test.rs
tests/src/cli/: db_tool_test.rs  hash_passwords_test.rs  passwd_tool_test.rs  test_users_test.rs  user_tool_test.rs
tests/src/db/: test_session_repository.rs
tests/src/helpers/: auth.rs  clock.rs  db.rs
tests/src/mocks/: mod.rs  session.rs  user.rs
tests/src/reporting/: mod.rs
(+40 files in other folders)
