[package]
name = "acci"
version = "0.1.26"
edition = "2021"
rust-version = "1.84.1"
authors = ["Michael Walloschke <michael.walloschke@axians.de>"]
description = "Enterprise-grade Rust-based system with multi-tenancy support"
license = "Apache-2.0"

[[bin]]
name = "acci"
path = "src/main.rs"

[dependencies]
# External Dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[workspace]
members = [
    "crates/acci-core",
    "crates/acci-api",
    "crates/acci-db",
    "crates/acci-auth",
    "crates/acci-frontend",
    "tests", "crates/acci-cli",
]

[workspace.package]
version = "0.1.23"
edition = "2021"
description = "Access Control and Continuous Integration"
license = "Apache-2.0"
rust-version = "1.75.0"
authors = ["Michael Walloschke <michael.walloschke@axians.de>"]
repository = "https://github.com/broccode/acci"

[workspace.dependencies]
# Internal Dependencies
acci-core = { path = "crates/acci-core" }
acci-api = { path = "crates/acci-api" }
acci-db = { path = "crates/acci-db" }
acci-auth = { path = "crates/acci-auth" }
acci-frontend = { path = "crates/acci-frontend" }
acci-cli = { path = "crates/acci-cli" }

# Core
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
bytes = "1.5.0"
http-body-util = "0.1.1"
futures = "0.3.30"
chrono = { version = "0.4.35", features = ["serde"] }
serde_json = "1.0.114"
hyper = { version = "1.2.0", features = ["full"] }

# Database
sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "time",
    "json",
    "migrate",
    "macros"
] }
sea-query = "0.32.1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Authentication & Security
jsonwebtoken = "9.3.1"
argon2 = { version = "0.5.3" }
rand = "0.8.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
async-trait = "0.1"
validator = { version = "0.20.0", features = ["derive"] }

# Serialization
serde = { version = "1.0.217", features = ["derive"] }

# Logging & Metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Error Handling
thiserror = "2.0.11"
anyhow = "1.0.95"

# Testing
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
mockall = "0.12.1"
assert_cmd = "2.0.11"
criterion = "0.5.1"
predicates = "2.1.1"
proptest = "1.1.1"
tempfile = "3.17.1"

# New dependencies
once_cell = "1.19.0"
metrics = "0.22.1"
base64 = "0.21.7"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"

[workspace.metadata]
msrv = "1.75.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
