[package]
name = "acci-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "acci_tests"
path = "src/lib.rs"

[dependencies]
# Workspace Dependencies
acci-api = { path = "../crates/acci-api" }
acci-auth = { path = "../crates/acci-auth" }
acci-cli = { path = "../crates/acci-cli" }
acci-core = { path = "../crates/acci-core" }
acci-db = { path = "../crates/acci-db" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }

# Test Dependencies
mockall = { workspace = true }
testcontainers-modules = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
