[package]
name = "acci-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "acci_auth"
path = "src/lib.rs"

[dependencies]
# Internal Dependencies
acci-core = { workspace = true }
acci-db = { workspace = true }

# External Dependencies
argon2 = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true # Enable workspace-wide lints
