[package]
name = "acci-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "acci_core"
path = "src/lib.rs"

[dependencies]
# Workspace Dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true # Enable workspace-wide lints
