[package]
name = "acci-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "acci_core"
path = "src/lib.rs"

[dependencies]
# Workspace Dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rand_core = { workspace = true }
time = { workspace = true }

# External Dependencies
argon2 = { workspace = true }

[lints]
workspace = true # Enable workspace-wide lints

[dev-dependencies]
tokio = { workspace = true }
