[package]
name = "acci-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "acci_core"
path = "src/lib.rs"

[dependencies]
# Authentication & Security
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand_core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
time = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
async-trait = { workspace = true }

# UUID
uuid = { workspace = true }

# Base64 encoding/decoding
base64 = { workspace = true }

# Random number generation
rand = { workspace = true }

# Lazy Static
lazy_static = { workspace = true }

# Database
sqlx = { workspace = true }

[lints]
workspace = true # Enable workspace-wide lints

[dev-dependencies]
tokio = { workspace = true }
