[package]
name = "acci-db"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[lib]
name = "acci_db"
path = "src/lib.rs"

[[bin]]
name = "acci-db"
path = "src/bin/acci-db.rs"

[[bin]]
name = "test_users"
path = "src/bin/test_users.rs"

[[bin]]
name = "hash_passwords"
path = "src/bin/hash_passwords.rs"

[dependencies]
# Workspace Dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true, features = ["time", "chrono"] }
clap = { workspace = true }

# Internal Dependencies
acci-core = { workspace = true }

# External Dependencies
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true # Enable workspace-wide lints
