[package]
name = "acci-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "acci_frontend"
path = "src/lib.rs"

[lints]
workspace = true # Enable workspace-wide lints
